# Framework

./: CMakeLists.txt  Doxyfile  README.md
demo/: ballMap.cpp  ballMap.h  cubeExample.cpp  cubeExample.h  cubeMap.cpp  cubeMap.h  demo.cpp  grassFloor.cpp  grassFloor.h  house.cpp  house.h  houseMap.cpp  houseMap.h  main.cpp  myBall.cpp  myBall.h  myCube.cpp  myCube.h  myHouse.cpp  myHouse.h  myScene.cpp  myScene.h  myTerrain.cpp  myTerrain.h  player.cpp  player.h  scene.cpp  scene.h  uvMap.cpp  uvMap.h
demo/assets/demo/grass/: GrassTexture.dds
demo/assets/demo/house/: House.dds
demo/assets/modeltest/: ball.dds  ball.tga  cube.dds  cube.tga  uvmap.tga
documentation/: documentation.html  framework_classdiagram.graphml
myFramework/: camera.cpp  camera.h  core.cpp  core.h  cube.cpp  cube.h  entity.cpp  entity.h  marchingCubes.cpp  marchingCubes.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  noise.cpp  noise.h  objloader.cpp  objloader.h  renderer.cpp  renderer.h  runner.cpp  runner.h  scene.cpp  scene.h  shader.cpp  shader.h  sprite.cpp  sprite.h  terrain.cpp  terrain.h  texture.cpp  texture.h  textureloader.cpp  textureloader.h  time.cpp  time.h  vboindexing.cpp  vboindexing.h  (+2 more)
myFramework/shaders/3D/: model.frag  model.vert
src/: CMakeLists.txt
src/demo/: demo.cpp
src/myFramework/: camera.cpp  renderer.h  sprite.cpp
